--- a/src/style.css
+++ b/src/style.css
@@ -12,8 +12,33 @@ nav li{
 #block0{
     margin-top: 60px;
     margin-bottom: 50px;
-    margin-left:200px;
-    margin-right: 200px;
+    margin-left: 20%;
+    margin-right:20%;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+}
+.card {
+   
+    margin-right: 5%;
+    
+    
+}
+.block1{
+    display: flex;
+    margin-left: 5%;
+    margin-right:10%;
+    margin-bottom:50px;
+    
+    
+}
+.our-work{
+    font-size: 29px;
+    text-align: center;
+    font-weight: 600;
+    margin-bottom: 20px;
+
+}
+.background-black{
+    background-color: black;
+    
 }
